--- a/app/src/main/res/layout/card_dashboard_dates.xml
+++ b/app/src/main/res/layout/card_dashboard_dates.xml
@@ -20,6 +20,7 @@
         android:layout_marginTop="8dp"
         android:text="10"
         android:textAlignment="center"
+        android:textColor="@color/almost_black"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/id_card_scadenza_month"
         app:layout_constraintEnd_toStartOf="@+id/rv_movimenti"
@@ -37,6 +38,7 @@
         android:padding="0dp"
         android:text="AGO"
         android:textAlignment="center"
+        android:textColor="@color/almost_black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -52,6 +54,7 @@
         android:layout_marginStart="8dp"
         android:padding="0dp"
         android:textAlignment="center"
+        android:textColor="@color/almost_black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
