--- a/app/src/main/res/layout/card_dashboard_transactions.xml
+++ b/app/src/main/res/layout/card_dashboard_transactions.xml
@@ -21,8 +21,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="16541"
         android:textAlignment="center"
+        android:textColor="@color/almost_black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:text="pagato fino"
         android:textAlignment="center"
+        android:textColor="@color/almost_black"
         android:textSize="10sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toTopOf="@+id/id_card_saldato_month"
@@ -45,7 +46,7 @@
         android:layout_width="16dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:text="11"
+        android:textColor="@color/almost_black"
         app:layout_constraintBottom_toBottomOf="@+id/id_card_saldato_month"
         app:layout_constraintEnd_toStartOf="@+id/id_card_saldato_month"
         app:layout_constraintTop_toTopOf="@+id/id_card_saldato_month" />
@@ -56,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginTop="16dp"
-        android:text="AGO"
+        android:textColor="@color/almost_black"
         app:layout_constraintBottom_toBottomOf="@+id/id_card_importo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/id_card_importo" />
@@ -122,8 +123,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="pio"
         android:textAlignment="center"
+        android:textColor="@color/almost_black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/ic_beneficiario"
