--- a/app/src/main/res/layout/filter_menu.xml
+++ b/app/src/main/res/layout/filter_menu.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@android:color/darker_gray"
-    android:orientation="vertical"
-    app:behavior_peekHeight="40dp"
+    android:layout_height="wrap_content"
+    app:behavior_peekHeight="54dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/colorAccent"
-        android:gravity="center"
-        android:text="Filtri"
-        android:textAlignment="center"
-        android:textColor="@android:color/white" />
-
-    <Switch
-        android:id="@+id/btn_check"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Completate"
-        android:textAlignment="viewStart"
+        android:gravity="center"
+        android:text="Filtri"
+        android:textAlignment="center"
+        android:textColor="@color/almost_black"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Switch
+        android:id="@+id/btn_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/almost_black"
+        android:text="Completate"
+        android:textAlignment="viewStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout2"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -44,24 +49,25 @@
 
         <AutoCompleteTextView
             android:id="@id/id_edittext_filter_beneficiario"
-            android:hint="beneficiario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:hint="beneficiario"
+            android:textAlignment="center" />
 
     </android.support.design.widget.TextInputLayout>
 
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
