--- a/app/src/main/res/layout/fragment_dialog_fragment_conto.xml
+++ b/app/src/main/res/layout/fragment_dialog_fragment_conto.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical"
         >
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinner_accounts"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:spinnerMode="dropdown"
