--- a/app/src/main/res/layout/main_activity_view.xml
+++ b/app/src/main/res/layout/main_activity_view.xml
@@ -7,53 +7,84 @@
     tools:context=".activities.MainActivity">
 
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
             android:id="@id/toolbar_mainactivity"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:elevation="4dp"
-            android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
-            app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
-            android:layout_height="56dp"
             android:paddingRight="56dp"
-            >
+            android:scrollbars="none"
+            android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerview_filter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
+            tools:layout_conversion_absoluteHeight="56dp"
+            tools:layout_conversion_absoluteWidth="384dp">
 
-
-            <Button
-                android:id="@+id/selectdate"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:hint="Seleziona intervallo di tempo"
-                android:textAlignment="center"
-                android:layout_marginLeft="?attr/actionBarSize"
-                android:layout_marginRight="?attr/actionBarSize"
-            />
+                android:orientation="horizontal"
+                android:weightSum="1"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="4dp">
 
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".9"
+                    android:gravity="center_vertical"
+                    android:text="Situazione conti fino al"
+                    android:textSize="18sp" />
+
+                <Button
+
+                    android:id="@+id/selectdate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".1"
+                    android:background="@android:color/transparent"
+                    android:gravity="right|center_vertical|end"
+                    android:textAlignment="textEnd"
+                    android:textSize="24sp" />
+
+
+            </LinearLayout>
 
 
         </android.support.v7.widget.Toolbar>
 
-        <android.support.v7.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+
+        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            tools:context=".activities.MainActivity"
-
-
             android:id="@+id/recyclerview_filter"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical"/>
 
 
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:scrollbars="none"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_mainactivity"
+            tools:context=".activities.MainActivity"
+            tools:layout_conversion_absoluteHeight="511dp"
+            tools:layout_conversion_absoluteWidth="384dp" />
 
-    </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
 
 
 
