--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#adb8f4</color>
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="black">#000000</color>
+    <color name="almost_black">#444444</color>
+
     <color name="white">#ffffff</color>
     <color name="pink">#e91e63</color>
     <color name="purple">#9c1ab1</color>
