--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <AutoCompleteTextView
+            android:inputType="textAutoComplete"
             android:id="@+id/inputBeneficiario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,6 +65,8 @@
         app:layout_constraintTop_toBottomOf="@+id/importo">
 
         <EditText
+            android:inputType="date"
+            android:focusable="false"
             android:id="@+id/select_date2"
             android:layout_width="160dp"
             android:layout_height="match_parent"
@@ -99,12 +102,14 @@
         app:layout_constraintTop_toBottomOf="@+id/recurrence">
 
         <EditText
+            android:inputType="date"
             android:id="@+id/select_end_date2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:hint="seleziona fine"
+            android:focusable="false"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -123,6 +128,8 @@
         app:layout_constraintTop_toBottomOf="@+id/selectDate">
 
         <EditText
+            android:focusable="false"
+            android:inputType="date"
             android:id="@+id/select_saldato2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
