--- a/app/src/main/res/layout/card_dashboard_accounts.xml
+++ b/app/src/main/res/layout/card_dashboard_accounts.xml
@@ -1,139 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cv_account_dashboard"
-    android:layout_width="match_parent"
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    card_view:cardBackgroundColor="@color/blue"
-    card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="1dp"
-    card_view:cardMaxElevation="15dp"
-    card_view:cardUseCompatPadding="true">
+    android:orientation="horizontal"
+   >
 
-    <android.support.constraint.ConstraintLayout
+    <TextView
+        android:layout_width="10dp"
+        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/cv_account_dashboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        card_view:cardBackgroundColor="@android:color/transparent"
+        card_view:cardCornerRadius="5dp"
+        card_view:cardElevation="0dp"
+        card_view:cardMaxElevation="5dp"
+        card_view:cardUseCompatPadding="true">
 
-
-        <TextView
-            android:id="@+id/id_account_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="Cassa di Risparmio di Volterra"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/ic_more"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
-            android:adjustViewBounds="true"
-            android:cropToPadding="false"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/ic_more_vert_black_24dp" />
-
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:text="SALDO ATTUALE"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/id_account_name" />
-
-        <TextView
-            android:id="@+id/id_account_current_balance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="35,87€"
-            android:textAlignment="viewEnd"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            card_view:layout_constraintBottom_toBottomOf="@+id/textView3"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="@+id/textView3" />
-
-
-        <TextView
-            android:id="@+id/id_account_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="4 movimenti"
-            android:textColor="@color/white"
-            android:textSize="10sp"
-            android:textStyle="italic"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/id_account_name" />
-
-        <View
-            android:id="@+id/divider"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="24dp"
-            android:background="?android:attr/listDivider"
-            card_view:layout_constraintTop_toBottomOf="@+id/textView3" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+
+            >
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/id_card_bg1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+
+                >
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_dates"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:visibility="gone"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/divider">
+                <TextView
+                    android:id="@+id/id_account_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Cassa di Risparmio di Volterra"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent" />
 
-        </android.support.v7.widget.RecyclerView>
+                <ImageView
+                    android:id="@+id/ic_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="SALDO PREVISTO"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/rv_dates" />
-
-        <TextView
-            android:id="@+id/id_account_future_balance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="68,1€"
-            android:textAlignment="viewEnd"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            card_view:layout_constraintBottom_toBottomOf="@+id/textView"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="@+id/textView" />
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="16dp"
+                    android:adjustViewBounds="true"
+                    android:cropToPadding="false"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent"
+                    card_view:srcCompat="@drawable/ic_more_vert_black_24dp" />
 
 
-    </android.support.constraint.ConstraintLayout>
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="32dp"
+                    android:text="SALDO ATTUALE"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toBottomOf="@+id/id_account_name" />
+
+                <TextView
+                    android:id="@+id/id_account_current_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:text="35,87€"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    card_view:layout_constraintBottom_toBottomOf="@+id/textView3"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintTop_toTopOf="@+id/textView3" />
 
 
-</android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/id_account_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="4 movimenti"
+                    android:textColor="@color/white"
+                    android:textSize="10sp"
+                    android:textStyle="italic"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toBottomOf="@+id/id_account_name" />
+
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="24dp"
+                    android:background="?android:attr/listDivider"
+                    card_view:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+
+            </android.support.constraint.ConstraintLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_dates"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:clipToPadding="true"
+                android:paddingBottom="5dp"
+                android:visibility="visible"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toBottomOf="@+id/divider">
+
+            </android.support.v7.widget.RecyclerView>
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/id_card_bg2"
+                android:layout_width="match_parent"
+
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/id_account_future_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:text="68,1€"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    card_view:layout_constraintBottom_toBottomOf="@+id/textView"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintTop_toTopOf="@+id/textView" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:text="SALDO PREVISTO"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toBottomOf="@+id/rv_dates" />
+            </android.support.constraint.ConstraintLayout>
+
+        </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+    <TextView
+        android:layout_width="10dp"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
