--- a/app/src/main/res/layout/card_dashboard_dates.xml
+++ b/app/src/main/res/layout/card_dashboard_dates.xml
@@ -6,75 +6,56 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
 
+    android:backgroundTint="@android:color/transparent"
+    android:background="@android:color/transparent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="0dp">
+    tools:layout_editor_absoluteY="212dp">
 
 
     <TextView
         android:id="@+id/id_card_scadenza_day"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="52dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="10"
         android:textAlignment="center"
         android:textColor="@color/almost_black"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/id_card_scadenza_month"
-        app:layout_constraintEnd_toStartOf="@+id/rv_movimenti"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toStartOf="@+id/id_card_scadenza_month"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@+id/rv_movimenti"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/id_card_scadenza_month"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:padding="0dp"
-        android:text="AGO"
-        android:textAlignment="center"
-        android:textColor="@color/almost_black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_card_scadenza_day" />
-
-
-    <TextView
-        android:id="@+id/id_card_scadenza_year"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:padding="0dp"
-        android:textAlignment="center"
-        android:textColor="@color/almost_black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_card_scadenza_day" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_movimenti"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:backgroundTint="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/id_card_scadenza_month"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_card_scadenza_day" />
+
+    <TextView
+        android:id="@+id/id_card_scadenza_month"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:padding="0dp"
+        android:text="AGO"
+        android:textAlignment="center"
+        android:textColor="@color/almost_black"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="@+id/id_card_scadenza_day"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/id_card_scadenza_day"
+        app:layout_constraintTop_toTopOf="@+id/id_card_scadenza_day" />
 
 
 </android.support.constraint.ConstraintLayout>
