--- a/app/src/main/res/layout/card_dashboard_transactions.xml
+++ b/app/src/main/res/layout/card_dashboard_transactions.xml
@@ -1,145 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardBackgroundColor="@android:color/white"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="1dp"
+    app:cardMaxElevation="1dp"
+    app:cardUseCompatPadding="true"
+    app:contentPadding="5dp">
 
-    android:layout_gravity="center"
-    android:layout_margin="0dp"
-    android:orientation="vertical">
-
-
-    <TextView
-        android:id="@+id/id_card_importo"
-        android:layout_width="0dp"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textAlignment="center"
-        android:textColor="@color/almost_black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/id_card_saldato_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="pagato fino"
-        android:textAlignment="center"
-        android:textColor="@color/almost_black"
-        android:textSize="10sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/id_card_saldato_month"
-        app:layout_constraintEnd_toEndOf="@+id/id_card_saldato_month"
-        app:layout_constraintStart_toStartOf="@+id/id_card_saldato_day" />
-
-    <TextView
-        android:id="@+id/id_card_saldato_day"
-        android:layout_width="16dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:textColor="@color/almost_black"
-        app:layout_constraintBottom_toBottomOf="@+id/id_card_saldato_month"
-        app:layout_constraintEnd_toStartOf="@+id/id_card_saldato_month"
-        app:layout_constraintTop_toTopOf="@+id/id_card_saldato_month" />
-
-    <TextView
-        android:id="@+id/id_card_saldato_month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/almost_black"
-        app:layout_constraintBottom_toBottomOf="@+id/id_card_importo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/id_card_importo" />
-
-    <ImageView
-        android:id="@+id/ic_recurrence"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="2dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:srcCompat="@drawable/ic_recurrence" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:padding="2dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ic_beneficiario"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ic_beneficiario"
-        app:srcCompat="@drawable/ic_trans_out"
-        tools:layout_conversion_absoluteHeight="54dp"
-        tools:layout_conversion_absoluteWidth="28dp" />
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteY="273dp">
 
 
-    <TextView
-        android:id="@+id/id_card_tipo"
-        style="@style/text_style_tipo"
-        android:layout_width="wrap_content"
-        android:layout_height="19dp"
-        android:layout_marginStart="32dp"
-        android:text="assegno"
-        android:textAlignment="center"
-        android:textSize="12sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="@+id/ic_beneficiario"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ic_beneficiario" />
-
-    <ImageView
-        android:id="@+id/ic_beneficiario"
-        android:layout_width="wrap_content"
-        android:layout_height="23dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/id_card_beneficiario"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@+id/id_card_tipo"
-        app:layout_constraintTop_toBottomOf="@+id/id_card_importo"
-        app:srcCompat="@drawable/ic_beneficiario" />
-
-    <TextView
-        android:id="@+id/id_card_beneficiario"
-
-        style="@style/text_style_beneficiario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textColor="@color/almost_black"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/ic_beneficiario"
-        app:layout_constraintEnd_toStartOf="@+id/ic_recurrence"
-        app:layout_constraintStart_toEndOf="@+id/ic_beneficiario"
-        app:layout_constraintTop_toTopOf="@+id/ic_beneficiario"
-        tools:layout_conversion_absoluteHeight="25dp"
-        tools:layout_conversion_absoluteWidth="1dp" />
+        <TextView
+            android:id="@+id/id_card_importo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
 
-    <android.support.constraint.Group
-        android:id="@+id/hidden_transaction_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:constraint_referenced_ids="id_card_beneficiario, ic_beneficiario, id_card_tipo,ic_recurrence,imageView2" />
-</android.support.constraint.ConstraintLayout>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="345,15€"
+            android:textAlignment="center"
+            android:textColor="@color/red"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/id_card_account"
+            android:layout_width="wrap_content"
+            android:layout_height="14dp"
+
+
+            android:text="Cassa di Risparmio di Volterra"
+            android:textColor="@color/almost_black"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/id_card_tipo"
+            app:layout_constraintStart_toEndOf="@+id/id_card_punto"
+            app:layout_constraintTop_toTopOf="@+id/id_card_tipo" />
+
+        <TextView
+            android:id="@+id/id_card_saldato_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="8dp"
+            android:text="pagato fino"
+            android:textAlignment="center"
+            android:textColor="@color/almost_black"
+            android:textSize="10sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_card_tipo" />
+
+        <TextView
+            android:id="@+id/id_card_saldato_day"
+            android:layout_width="16dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/almost_black"
+            app:layout_constraintBottom_toBottomOf="@+id/id_card_saldato_text"
+            app:layout_constraintStart_toEndOf="@+id/id_card_saldato_text"
+            app:layout_constraintTop_toTopOf="@+id/id_card_saldato_text" />
+
+        <TextView
+            android:id="@+id/id_card_saldato_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:textColor="@color/almost_black"
+            app:layout_constraintBottom_toBottomOf="@+id/id_card_saldato_day"
+            app:layout_constraintStart_toEndOf="@+id/id_card_saldato_day"
+            app:layout_constraintTop_toTopOf="@+id/id_card_saldato_day" />
+
+        <!--
+        <ImageView
+            android:id="@+id/ic_recurrence"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/ic_recurrence"
+            tools:layout_editor_absoluteX="308dp"
+            tools:layout_editor_absoluteY="49dp" />
+-->
+
+        <ImageView
+            android:id="@+id/imageView2"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:padding="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_trans_out"
+            tools:layout_conversion_absoluteHeight="54dp"
+            tools:layout_conversion_absoluteWidth="28dp" />
+
+
+        <TextView
+            android:id="@+id/id_card_punto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text=" • "
+            app:layout_constraintBottom_toBottomOf="@+id/id_card_tipo"
+            app:layout_constraintStart_toEndOf="@+id/id_card_tipo"
+            app:layout_constraintTop_toTopOf="@+id/id_card_tipo" />
+
+        <TextView
+            android:id="@+id/id_card_tipo"
+            style="@style/text_style_tipo"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="ASSEGNO"
+            android:textAlignment="center"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_card_beneficiario" />
+
+        <!--
+        <ImageView
+            android:id="@+id/ic_beneficiario"
+            android:layout_width="wrap_content"
+            android:layout_height="23dp"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/ic_beneficiario"
+            tools:layout_editor_absoluteX="180dp"
+            tools:layout_editor_absoluteY="48dp" />
+-->
+
+        <TextView
+            android:id="@+id/id_card_beneficiario"
+
+            style="@style/text_style_beneficiario"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_marginStart="8dp"
+            android:text="Gronchi"
+            android:textAlignment="center"
+            android:textColor="@color/almost_black"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/id_card_importo"
+            tools:layout_conversion_absoluteHeight="25dp"
+            tools:layout_conversion_absoluteWidth="1dp" />
+
+
+        <android.support.constraint.Group
+            android:id="@+id/hidden_transaction_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:constraint_referenced_ids="id_card_tipo, id_card_saldato_text, id_card_saldato_day, id_card_saldato_month, id_card_account, id_card_punto" />
+
+    </android.support.constraint.ConstraintLayout>
+
+
+</android.support.v7.widget.CardView>
 
