--- a/app/src/main/res/layout/main_activity_view.xml
+++ b/app/src/main/res/layout/main_activity_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.MainActivity">
 
@@ -14,21 +15,22 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
-            android:id="@id/toolbar_mainactivity"
-            android:layout_width="0dp"
+            android:id="@id/toolbar_main"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/white"
             android:elevation="4dp"
-            android:paddingRight="56dp"
+            android:padding="5dp"
             android:scrollbars="none"
             android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerview_filter"
+            app:layout_constraintBottom_toTopOf="@id/recyclerview_main_accounts"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
-            tools:layout_conversion_absoluteHeight="56dp"
-            tools:layout_conversion_absoluteWidth="384dp">
+            app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -39,25 +41,25 @@
                 tools:layout_editor_absoluteY="4dp">
 
                 <TextView
-                    android:textColor="@color/almost_black"
                     android:id="@+id/textView5"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight=".9"
                     android:gravity="center_vertical"
-                    android:text="Situazione conti fino al"
+                    android:text="@string/main_cto"
+                    android:textAlignment="center"
+                    android:textColor="@color/almost_black"
                     android:textSize="18sp" />
 
                 <Button
 
-                    android:textColor="@color/almost_black"
                     android:id="@+id/selectdate"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight=".1"
                     android:background="@android:color/transparent"
-                    android:gravity="right|center_vertical|end"
-                    android:textAlignment="textEnd"
+                    android:textAlignment="center"
+                    android:textColor="@color/almost_black"
                     android:textSize="24sp" />
 
 
@@ -70,7 +72,7 @@
         <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/recyclerview_filter"
+            android:id="@+id/recyclerview_main_accounts"
 
 
             android:layout_width="0dp"
@@ -80,7 +82,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar_mainactivity"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
             tools:context=".activities.MainActivity"
             tools:layout_conversion_absoluteHeight="511dp"
             tools:layout_conversion_absoluteWidth="384dp" />
