--- a/app/src/main/res/layout/navigation_drawer_filter.xml
+++ b/app/src/main/res/layout/navigation_drawer_filter.xml
@@ -14,7 +14,7 @@
 
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/navigationview_main"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_gravity="start"
