--- a/app/src/main/res/layout/navigation_drawer_main.xml
+++ b/app/src/main/res/layout/navigation_drawer_main.xml
@@ -1,6 +1,6 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawer_main"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
@@ -14,7 +14,7 @@
 
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@id/navigationview_main"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_gravity="start"
