--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -102,14 +102,14 @@
         app:layout_constraintTop_toBottomOf="@+id/recurrence">
 
         <EditText
-            android:inputType="date"
             android:id="@+id/select_end_date2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:hint="seleziona fine"
             android:focusable="false"
+            android:hint="seleziona fine"
+            android:inputType="date"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -125,15 +125,15 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectDate">
+        app:layout_constraintTop_toBottomOf="@+id/endDate">
 
         <EditText
-            android:focusable="false"
-            android:inputType="date"
             android:id="@+id/select_saldato2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="saldato fino a" />
+            android:focusable="false"
+            android:hint="saldato fino a"
+            android:inputType="date" />
     </android.support.design.widget.TextInputLayout>
 
     <Spinner
