--- a/app/src/main/res/layout/card_dashboard_accounts.xml
+++ b/app/src/main/res/layout/card_dashboard_accounts.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-   >
+    android:orientation="horizontal">
 
     <TextView
-        android:layout_width="10dp"
+        android:layout_width="15dp"
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/cv_account_dashboard"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         card_view:cardBackgroundColor="@android:color/transparent"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="0dp"
@@ -167,7 +167,7 @@
     </android.support.v7.widget.CardView>
 
     <TextView
-        android:layout_width="10dp"
+        android:layout_width="15dp"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
