--- a/app/src/main/res/layout/card_transaction.xml
+++ b/app/src/main/res/layout/card_transaction.xml
@@ -30,7 +30,7 @@
         android:id="@+id/id_card_scadenza_month"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
         android:padding="0dp"
         android:textAlignment="center"
@@ -137,12 +137,11 @@
         tools:layout_conversion_absoluteWidth="1dp" />
 
     <android.support.constraint.Group
+        android:id="@+id/hidden_transaction_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:id="@+id/hidden_transaction_group"
-        app:constraint_referenced_ids="ic_beneficiario, id_card_beneficiario, id_card_tipo"
-        />
+        app:constraint_referenced_ids="ic_beneficiario, id_card_beneficiario, id_card_tipo" />
 
 </android.support.constraint.ConstraintLayout>
 
