--- a/app/src/main/res/layout/filter_activity_view.xml
+++ b/app/src/main/res/layout/filter_activity_view.xml
@@ -5,38 +5,37 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
-
-
+    <View
+        android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:scrollbars="none"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
-        tools:context=".activities.AllTransactionActivity">
+        android:background="#99000000"
+        android:elevation="1dp"
+        android:visibility="gone" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
 
 
-    </android.support.v7.widget.RecyclerView>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:scrollbars="none"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinner"
+            tools:context=".activities.AllTransactionActivity">
 
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/fab_insert_transaction"
-        android:layout_width="0dp"
+        </android.support.v7.widget.RecyclerView>
 
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:visibility="invisible"
+
+
+    <include layout="@layout/filter_menu"
         />
-    <include layout="@layout/filter_menu" />
-
 
 </android.support.design.widget.CoordinatorLayout>
