--- a/app/src/main/res/layout/filter_menu.xml
+++ b/app/src/main/res/layout/filter_menu.xml
@@ -8,6 +8,7 @@
     android:background="@android:color/transparent"
     app:behavior_hideable="false"
     app:behavior_peekHeight="55dp"
+    android:elevation="3dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <android.support.v7.widget.CardView
@@ -16,7 +17,6 @@
 
         app:cardBackgroundColor="@color/grey_bg_soft"
         app:cardCornerRadius="25dp"
-        app:cardElevation="2dp"
         app:cardMaxElevation="5dp"
         app:cardUseCompatPadding="true">
 
