--- a/app/src/main/res/layout/navigation_drawer_filter2.xml
+++ b/app/src/main/res/layout/navigation_drawer_filter2.xml
@@ -4,15 +4,13 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
+    android:clickable="true"
     android:focusableInTouchMode="true">
 
 
-
-        <include
-            layout="@layout/filter_activity_view"
-            />
-
-
+    <include layout="@layout/filter_activity_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
     <android.support.design.widget.NavigationView
