--- a/app/src/main/res/layout/card_dashboard_accounts.xml
+++ b/app/src/main/res/layout/card_dashboard_accounts.xml
@@ -15,7 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        card_view:cardBackgroundColor="@android:color/transparent"
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="0dp"
         card_view:cardMaxElevation="5dp"
@@ -120,7 +119,7 @@
                 android:background="@android:color/transparent"
                 android:clipToPadding="true"
                 android:paddingBottom="5dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toBottomOf="@+id/divider">
