--- a/app/src/main/res/layout/filter_activity_view.xml
+++ b/app/src/main/res/layout/filter_activity_view.xml
@@ -4,16 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
+    android:background="@color/grey"
+    android:backgroundTint="@color/grey"
+
     android:layout_height="match_parent"
     >
 
-    <View
-        android:id="@+id/bg"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#99000000"
-        android:elevation="1dp"
-        android:visibility="gone" />
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#99000000"
+            android:elevation="1dp"
+            android:visibility="gone" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
@@ -21,10 +28,12 @@
 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="35dp"
             android:scrollbars="none"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinner"
@@ -32,6 +41,9 @@
 
 
         </android.support.v7.widget.RecyclerView>
+
+    </android.support.constraint.ConstraintLayout>
+
 
 
 
