--- a/app/src/main/res/layout/filter_menu.xml
+++ b/app/src/main/res/layout/filter_menu.xml
@@ -15,9 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        app:cardBackgroundColor="@color/grey_bg_soft"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="25dp"
         app:cardMaxElevation="5dp"
+        app:cardElevation="5dp"
         app:cardUseCompatPadding="true">
 
         <android.support.constraint.ConstraintLayout
@@ -45,7 +46,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/id_title_bottom_filter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -85,7 +86,7 @@
                 android:textColor="@color/almost_black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                app:layout_constraintTop_toBottomOf="@+id/id_title_bottom_filter" />
 
         </android.support.constraint.ConstraintLayout>
 
