--- a/app/src/main/res/layout/menu_bottom_insert.xml
+++ b/app/src/main/res/layout/menu_bottom_insert.xml
@@ -6,34 +6,43 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
-    app:behavior_hideable="false"
-    app:behavior_peekHeight="55dp"
     android:elevation="3dp"
+    app:behavior_hideable="false"
+    app:behavior_peekHeight="60dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        app:cardBackgroundColor="@color/grey_bg_soft"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="25dp"
         app:cardMaxElevation="5dp"
         app:cardUseCompatPadding="true">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Inserisci"
-            android:textAlignment="center"
-            android:textSize="24sp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <FrameLayout
-            android:padding="10dp"
-            android:id="@+id/container_bottom_insert"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/id_title_bottom_insert"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:gravity="center_vertical"
+                android:text="Inserisci"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:visibility="visible" />
 
-        </FrameLayout>
+            <FrameLayout
+                android:id="@+id/container_bottom_insert"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp">
+
+            </FrameLayout>
+        </LinearLayout>
 
 
     </android.support.v7.widget.CardView>
