--- a/app/src/main/res/layout/filter_menu.xml
+++ b/app/src/main/res/layout/filter_menu.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     app:behavior_hideable="false"
-    app:behavior_peekHeight="55dp"
+    app:behavior_peekHeight="70dp"
     android:elevation="3dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
@@ -47,19 +47,14 @@
 
             <TextView
                 android:id="@+id/id_title_bottom_filter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:text="Filtri"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:gravity="center_vertical"
+                android:text="Trascina per filtrare..."
                 android:textAlignment="center"
-                android:textColor="@color/almost_black"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textSize="14sp"
+                android:visibility="visible" />
+
 
             <Spinner
                 android:id="@+id/spinner"
