--- a/app/src/main/res/layout/navigation_drawer_filter.xml
+++ b/app/src/main/res/layout/navigation_drawer_filter.xml
@@ -9,7 +9,7 @@
 
 
         <include
-            layout="@layout/filter_activity_view"
+            layout="@layout/activity_filter"
             />
 
 
