--- a/app/src/main/res/layout/navigation_drawer_main.xml
+++ b/app/src/main/res/layout/navigation_drawer_main.xml
@@ -8,7 +8,7 @@
     android:focusableInTouchMode="true">
 
 
-    <include layout="@layout/main_activity_view"
+    <include layout="@layout/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
