--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -2,7 +2,6 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:background="@color/grey"
     android:backgroundTint="@color/grey"
@@ -15,7 +14,7 @@
         android:layout_height="match_parent">
 
         <View
-            android:id="@+id/bg"
+            android:id="@id/view_filter_scrim"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#99000000"
@@ -23,7 +22,7 @@
             android:visibility="gone" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@id/recyclerview_filter_content"
 
 
             android:layout_width="match_parent"
@@ -36,7 +35,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner"
+            app:layout_constraintTop_toTopOf="parent"
             tools:context=".activities.AllTransactionActivity">
 
 
