--- a/app/src/main/res/layout/activity_accountmanage.xml
+++ b/app/src/main/res/layout/activity_accountmanage.xml
@@ -12,7 +12,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rv_account_manage">
+        android:id="@id/rv_accountmanage_content">
 
     </android.support.v7.widget.RecyclerView>
 
