--- a/app/src/main/res/layout/card_accountmanage_account.xml
+++ b/app/src/main/res/layout/card_accountmanage_account.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cv_account_dashboard"
+    android:id="@id/cv_accountmanage"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="1dp"
+    app:cardBackgroundColor="@color/black"
     app:cardCornerRadius="5dp"
     app:cardUseCompatPadding="true"
     card_view:cardMaxElevation="5dp"
@@ -18,13 +19,13 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/cardNomeconto"
+            android:id="@id/tv_accountmanage_accountname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
 
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:textColor="@android:color/white"
             android:textSize="18sp"
@@ -33,73 +34,63 @@
             card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/cardSaldoconto"
+            android:id="@id/tv_accountmanage_accountbalance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
 
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:textColor="@android:color/white"
             android:textSize="35sp"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/cardNomeconto" />
+            card_view:layout_constraintTop_toBottomOf="@id/tv_accountmanage_accountname" />
 
         <ImageView
-            android:id="@+id/img_edit_account"
+            android:id="@id/img_edit_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginBottom="16dp"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/img_edit_description"
+            android:cropToPadding="false"
+
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/img_delete_account"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_accountmanage_accountbalance"
+            card_view:srcCompat="@drawable/ic_edit" />
+
+        <ImageView
+            android:id="@id/img_delete_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:adjustViewBounds="true"
+            android:contentDescription="@string/img_del_description"
             android:cropToPadding="false"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.5"
-            card_view:layout_constraintStart_toEndOf="@+id/img_delete_account"
-            card_view:layout_constraintTop_toTopOf="@+id/img_delete_account"
-            card_view:srcCompat="@drawable/ic_edit"
-            android:contentDescription="TODO" />
-
-        <ImageView
-            android:id="@+id/img_delete_account"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:adjustViewBounds="true"
-            android:cropToPadding="false"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toStartOf="@+id/img_edit_account"
-            card_view:layout_constraintHorizontal_bias="0.5"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/textView2"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/img_edit_account"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/img_edit_account"
+            app:layout_constraintTop_toTopOf="@id/img_edit_account"
             card_view:srcCompat="@drawable/ic_delete" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
-            android:textColor="@android:color/white"
-            android:textSize="12sp"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/cardSaldoconto"
-            card_view:layout_constraintVertical_bias="0.0" />
-
         <android.support.constraint.Group
-            android:id="@+id/hidden_account_group"
+            android:id="@id/group_accountmanage_cardconti"
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
-            android:visibility="visible"
-            card_view:constraint_referenced_ids="img_delete_account, img_edit_account" />
+            app:constraint_referenced_ids="img_delete_account, img_edit_account"
+            tools:ignore="NotSibling" />
+
 
 
     </android.support.constraint.ConstraintLayout>
